--- a/chart/templates/jobs/migrate-database-job.yaml
+++ b/chart/templates/jobs/migrate-database-job.yaml
@@ -39,7 +39,7 @@ metadata:
 {{- end }}
   {{- $annotations := dict }}
   {{- if .Values.migrateDatabaseJob.useHelmHooks }}
-    {{- $_ := set $annotations "helm.sh/hook" "post-install,post-upgrade" }}
+    {{- $_ := set $annotations "helm.sh/hook" "pre-install,pre-upgrade" }}
     {{- $_ := set $annotations "helm.sh/hook-weight" "1" }}
     {{- $_ := set $annotations "helm.sh/hook-delete-policy" "before-hook-creation,hook-succeeded" }}
   {{- end }}
